@@ -1,6 +1,7 @@
 48
 ================
 
+18/08/23 Show timeline on mobile UI home screen #1096
 
 47
 ================
